# mnd

./: .gitignore  .npmrc  README.md  graph-release-report.json  install.ps1  mnd-update.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-gates.json  release-gates.spec.json  release-report.json  test_exit.mjs  tsconfig.json  tsconfig.test.json  write-tests.cjs
apps/: graph-release-report.json
apps/mnd-graph/src-tauri/: Cargo.toml  deps-patch.txt  tauri.conf.json
apps/mnd-graph/src-tauri/capabilities/: default.json
apps/mnd-graph/src-tauri/src/: commands.rs  config.rs  index.rs  lib.rs  main.rs  models.rs  obsidian.rs  security.rs  state.rs  watcher.rs  workflow.rs
scripts/: mark-gates-pass.mjs  verify-release-gates.mjs
sidecar/: main.py  otio_export.py  requirements.txt  whisper_fallback.py
src/: index.ts
src/ui/: box.ts  (+13 more)
test/: analyzeFlags.test.ts  antigravityClientModel.test.ts  antigravityClientOperations.test.ts  antigravityDiscovery.test.ts  antigravityIdentity.test.ts  antigravityModels.test.ts  box.test.ts  buildEditPlan.test.ts  cancellation.test.ts  capabilitySkills.test.ts  commandPalette.test.ts  configProfile.test.ts  configV2Migration.test.ts  doctorIntegrations.test.ts  effectMaterializer.test.ts  esmSmoke.test.ts  exportTimeline.test.ts  fcpxmlValidator.test.ts  generate_video.cjs  googleAuth.test.ts  history.test.ts  levenshtein.test.ts  modelCatalog.test.ts  obsidian.test.ts  obsidianAliases.test.ts  obsidianOpen.test.ts  obsidianProjectTarget.test.ts  obsidianRegistration.test.ts  obsidianRepair.test.ts  obsidianReset.test.ts  (+29 more)
(+156 files in other folders)
